--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@heroicons/react": "^2.1.4",
+    "@types/mapbox-gl": "^3.1.0",
+    "antd": "^5.18.3",
+    "dotenv": "^16.4.5",
+    "mapbox-gl": "^3.4.0",
+    "next": "14.2.4",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-map-gl": "^7.1.7",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
