--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@types/mapbox-gl": "^3.1.0",
     "antd": "^5.18.3",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.4.0",
     "next": "14.2.4",
-    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-map-gl": "^7.1.7",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
