--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@types/mapbox-gl": "^3.1.0",
     "antd": "^5.18.3",
+    "aws-sdk": "^2.1648.0",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.4.0",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-map-gl": "^7.1.7",
+    "react-papaparse": "^4.4.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
